public/styles/home.css
:root {
    --main-bg-color: rgb(19, 19, 19);
    --secondary-bg-color: rgb(31, 31, 31);
    --main-border-color: rgb(56, 56, 56);
    --main-border-hover: rgb(78, 78, 78);
    --main-text-color: rgb(224, 224, 224);
    --secondary-text-color: rgb(94, 94, 94);
    --trinary-text-color: rgb(165, 165, 165);
    --accent-color: #ff7100;
    --accent-color-active: #ff9d4d;
    --footer-color: #444444;
    --font-xlarge: 1.8rem;
    --font-large: 1.3rem;
    --font-medium: 1.1rem;
}

html, body, #page {
    height:100%;
    width:100%;
    margin:0;
    padding:0;
    background-color: var(--main-bg-color);
    color: var(--main-text-color);
    font-family: 'Outfit', sans-serif;
}

.background {
    position: absolute;
    z-index: 1;
    background-image: linear-gradient(0deg, rgba(19,19,19,1) 0%, rgba(19,19,19,0.2) 100%), url(https://axicdn.s3.us-east-1.amazonaws.com/images/hydra.jpg);
    background-repeat: no-repeat;
    background-position: center top;
    background-size: cover;
    height: 50%;
    width: 100%;
}

.page {
    position: relative;
    z-index: 2;
}

.title {
    font-size: var(--font-xlarge);
    font-family: 'Outfit', sans-serif;
    color: var(--main-text-color);
    margin: 0;
    font-weight: normal;
}

.smallround {
    border-radius: 0.3rem;
}

.accented {
    color: var(--accent-color);
}

.line-orange-fade {
    background-image: linear-gradient(to right, rgba(255,113,0,1), rgba(255,113,0,0));
    height: 0.2rem;
}

nav {
    padding: 1rem;
    display: grid;
    grid-template-columns: 1fr 1fr 1fr;
}

nav div {
    display: flex;
    gap: 0.5rem;
    align-items: center;
}

nav img {
    object-fit: cover;
    width: 3rem;
    height: auto;
}

nav a {
    padding: 0.6rem 0.8rem 0.6rem 0.8rem;
    font-family: 'Outfit', sans-serif;
    font-size: 1.2rem;
    color: var(--main-text-color);
    text-decoration: none;
    transition: color 250ms;
    border-radius: 0.3rem;
}

nav a:hover {
    color: var(--accent-color);
}

.nav-mid {
    justify-content: center;
    gap: 1.5rem;
}

.nav-mid a {
    background-color: var(--secondary-bg-color);
    transition: background-color 250ms, color 250ms;
}

.nav-mid a:hover {
    background-color: var(--main-bg-color);
}

.nav-right {
    justify-content: flex-end
}

.link {
    font-size: 1.4rem;
    background-color: var(--secondary-bg-color);
    padding: 0.4rem 0.9rem 0.4rem 0.9rem;
    border-radius: 10rem;
    color: var(--main-bg-color);
    transition: color 250ms, background-color 250ms;
}

.link:hover {
    color: var(--accent-color);
    background-color: var(--main-bg-color);
}

.content {
    display: flex;
    justify-content: center;
    padding: 0rem 1rem 0rem 1rem;

}

header {
    margin-top: 15rem;
}

header h1 {
    margin: 0;
    font-size: 4rem;
    line-height: 3rem;
    font-weight: normal;
}

header h1 span {
    font-size: 2rem;
    color: var(--accent-color);
}

section {
    background-color: var(--secondary-bg-color);
    padding: 1rem;
}

section h2 {
    margin-top: 0;
    margin-bottom: 1rem;
    font-size: 2rem;
}

section h2 span {
    font-size: 1rem;
    color: var(--accent-color);
}

section h3 {
    font-size: 1.5rem;
} 

section p {
    line-height: 1.5rem;
}

article {
    background-color: var(--main-bg-color);
    margin-bottom: 1rem;
}

/* News Section */

.news article {
    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0); 
    transition: box-shadow 250ms;
}

.news article:hover {
    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5); 
}

.news-subheading {
    margin-bottom: 1rem;
    line-height: 1.5rem;
}

.article-alt {
    position: relative;
    height: 6rem;
    width: 100%;
    overflow: hidden;
}

.article-alt-bg {
    position: absolute;
    top: 0px;
    bottom: 0px;
    left: 0px;
    right: 0px;
    background-repeat: no-repeat;
    background-position: center center;
    background-size: cover;
    filter: blur(8px);
    -webkit-filter: blur(8px);
}

.article-alt-content {
    display: flex;
    flex-direction: row;
    justify-content: flex-start;
    align-items: flex-end;
    padding: 1rem;
    gap: 1rem;
    position: absolute;
    z-index: 9;
}

.article-alt-content h3 {
    margin: 0;
    font-size: 2rem;
}

.article-alt-content img {
    border-radius:50%;
    align-self: flex-start;
}

.article-title {
    background-repeat: no-repeat;
    background-position: center center;
    background-size: cover;
    height: 5.5rem;
    display: flex;
    flex-direction: column;
    justify-content: flex-end;
    align-items: flex-start;
    padding: 0.4rem 0.8rem 0.4rem 0.8rem;
}

.article-title div {
    margin: 0;
    font-size: 0.9rem;
    color: var(--accent-color);
}

.article-title h3 {
    margin: 0;
    font-size: 2rem;
}

.article-content {
    padding: 0.8rem;
    display: flex;
    flex-direction: column;
    gap: 0.5rem;
}

.article-content p {
    margin: 0;
}

.medal-img {
    object-fit: cover;
    width: 8rem;
    height: auto;
    position: relative;
    top: -4rem;
    right: 2rem;
    margin-bottom: -8rem;
    justify-content: right;
}

.animated-gradient {
    animation: animateBg 14s linear infinite;
    background-image: linear-gradient(90deg,#cf5c5c,#c19b4a,#def2a0,#c6ee4a,#42eca6,#64b3d9,#208ea2,#498ada,#5b73df,#897ed3,#cf5c5c,#c19b4a);
    background-size: 1100% 100%;
}

@keyframes animateBg {
    0% { background-position: 0% 0%; }
    100% { background-position: 100% 0%; }
}
  

/* Sidebar Section */

.sidebar {
    min-width: 250px;
}

.card {
    color: var(--main-text-color);
    text-decoration: none!important;
    padding: 1rem;
    border-radius: 0.3rem;
    flex-grow: 1;
    cursor: pointer;
    display: flex;
    flex-direction: column;
    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0); 
    transition: box-shadow 250ms, color 250ms;
    background-color: var(--main-bg-color);
}

.card div {
    text-decoration: none!important;
}

.card span {
    font-size: 3.5rem;
    color: var(--accent-color);
    margin-bottom: .5rem;
}

.card:hover {
    color: var(--accent-color);
    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
}

.card h3 {
    margin: 0;
    font-size: var(--font-large);
    text-decoration: none!important;
}

.card p {
    margin: 0;
    text-decoration: none!important;
}

.card img {
    object-fit: cover;
    width: 3.7rem;
    height: auto;
    margin-bottom: 0.7rem;
}

.noDecoration, a:link, a:visited {
    text-decoration: none;
    color: var(--main-text-color);
}

/* Defence Section */

.defence {
    padding: 0.5rem;
}

.defencebutton {
    margin-top: 0.4rem;
    background-color: var(--main-bg-color);
    border-radius: 0.3rem;
    padding: 0.5rem;
    font-size: 1.5rem;
    cursor: pointer;
    text-align: center;
    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0); 
    transition: box-shadow 250ms, color 250ms;
}

.defencebutton:hover {
    color: var(--accent-color);
    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
}

.defencebutton span {
    color: var(--accent-color);
}

/* About Section */

.about {
    text-align: center;
    display: flex;
    flex-direction: column;
    align-items: center;
}

.about img {
    object-fit: cover;
    width: 70%;
    height: auto;
}

.motto {
    font-size: 2rem;
    margin: 0;
    font-weight: bold;
    font-style: italic;
}

.motto-sub {
    margin: 0;
}

.video-container {
    position: relative;
    width: 100%;
    padding-bottom: 56.25%;
    overflow: hidden;
    border-radius: 0.5rem;
}

.video {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    border: 0;
}

/* Footer Section */

.footer {
    display: flex;
    align-items: center;
    justify-content: space-between;
    font-size: 0.8rem;
    margin-bottom: 1rem;
}

.footer p {
    margin: 0;
}

.footer img {
    object-fit: cover;
    width: 2rem;
    height: auto;
    margin-right: 0.5rem;
}

/* General CSS */

.max-width {
    max-width: 1300px;
}

.max-text {
    max-width: 75ch;
}

.showinmobile {
    display: none;
}

.end {
    margin-left: auto;
}

.copy-icon{
    width: fit-content;
    font-size: 1.2rem;
}

.copy-icon:hover{
    color: rgb(0, 195, 255);
    cursor: pointer;
    transition: 400ms;
}

.copy-icon:active{
    color: grey;
    cursor: pointer;
    transition: 200ms;
    transform: scale(0.8);
}

/* Mobile Layout Mode */

@media only screen and (max-width: 1000px) {

    .adaptive-row {
        flex-direction: column;
    }

    .title {
        font-size: 1.5rem;
    }

    header {
        margin-top: 2rem;
    }

    header h1 {
        line-height: 2rem;
        font-size: 2.5rem;
        padding-left: 1rem;
    }

    header h1 span {
        font-size: 1.5rem;
    }

    .showinmobile {
        display: block;
    }

    .mobile-hide {
        display: none;
    }

    nav {
        grid-template-columns: 1fr 4fr;
    }

    nav div {
        justify-content: center;
    }
    
    #priorities {
        flex-wrap: wrap;
    }

    .content {
        padding: 0rem;
    }

    section {
        padding: 0.5rem;
    }

    section h2 {
        padding-left: 0.3rem;
        margin-bottom: 0.5rem;
    }

    .article-alt-content h3 {
        margin: 0;
        font-size: 1.5rem;
    }
}

#menuToggle
{
  display: block;
  position: relative;
  
  z-index: 1;
  
  -webkit-user-select: none;
  user-select: none;
}

#menuToggle a
{
  text-decoration: none;
  color: #232323;
  
  transition: color 0.3s ease;
}

#menuToggle a:hover
{
  color: tomato;
}


#menuToggle input
{
  display: block;
  width: 40px;
  height: 32px;
  position: absolute;
  top: -7px;
  left: -5px;
  
  cursor: pointer;
  
  opacity: 0; /* hide this */
  z-index: 2; /* and place it over the hamburger */
  
  -webkit-touch-callout: none;
}

/*
 * Just a quick hamburger
 */
#menuToggle span
{
  display: block;
  width: 33px;
  height: 4px;
  margin-bottom: 5px;
  position: relative;
  
  background: #cdcdcd;
  border-radius: 3px;
  
  z-index: 1;
  
  transform-origin: 4px 0px;
  
  transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0),
              background 0.5s cubic-bezier(0.77,0.2,0.05,1.0),
              opacity 0.55s ease;
}

#menuToggle span:first-child
{
  transform-origin: 0% 0%;
}

#menuToggle span:nth-last-child(2)
{
  transform-origin: 0% 100%;
}

/* 
 * Transform all the slices of hamburger
 * into a crossmark.
 */
#menuToggle input:checked ~ span
{
  opacity: 1;
  transform: rotate(45deg) translate(-2px, -1px);
  background: #232323;
}

/*
 * But let's hide the middle one.
 */
#menuToggle input:checked ~ span:nth-last-child(3)
{
  opacity: 0;
  transform: rotate(0deg) scale(0.2, 0.2);
}

/*
 * Ohyeah and the last one should go the other direction
 */
#menuToggle input:checked ~ span:nth-last-child(2)
{
  transform: rotate(-45deg) translate(0, -1px);
}

/*
 * Make this absolute positioned
 * at the top left of the screen
 */
#menu
{
  position: absolute;
  width: 300px;
  margin: -100px 0 0 -50px;
  padding: 50px;
  padding-top: 125px;
  
  background: #ededed;
  list-style-type: none;
  -webkit-font-smoothing: antialiased;
  /* to stop flickering of text in safari */
  
  transform-origin: 0% 0%;
  transform: translate(-100%, 0);
  
  transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0);
}

#menu li
{
  padding: 10px 0;
  font-size: 22px;
}

/*
 * And let's slide it in from the left
 */
#menuToggle input:checked ~ ul
{
  transform: none;
}

